--- a/src/Ibw/JobeetBundle/Resources/config/doctrine/Job.orm.yml
+++ b/src/Ibw/JobeetBundle/Resources/config/doctrine/Job.orm.yml
@@ -1,5 +1,6 @@
 Ibw\JobeetBundle\Entity\Job:
     type: entity
+    repositoryClass: Ibw\JobeetBundle\Repository\JobRepository
     table: job
     id:
         id:
