--- a/src/Ibw/JobeetBundle/Resources/config/doctrine/Job.orm.yml
+++ b/src/Ibw/JobeetBundle/Resources/config/doctrine/Job.orm.yml
@@ -1,4 +1,7 @@
 Ibw\JobeetBundle\Entity\Job:
+    properties:
+        file:
+            - Image: ~
     type: entity
     repositoryClass: Ibw\JobeetBundle\Repository\JobRepository
     table: job
@@ -60,5 +63,8 @@ Ibw\JobeetBundle\Entity\Job:
                 name: category_id
                 referencedColumnName: id
     lifecycleCallbacks:
-        prePersist: [ setCreatedAtValue, setExpiresAtValue ]
-        preUpdate: [ setUpdatedAtValue ]
+        prePersist: [ preUpload, setCreatedAtValue, setExpiresAtValue ]
+        preUpdate: [ preUpload, setUpdatedAtValue ]
+        postPersist: [ upload ]
+        postUpdate: [ upload ]
+        postRemove: [ removeUpload ]
