--- a/src/Ibw/JobeetBundle/Resources/config/routing/job.yml
+++ b/src/Ibw/JobeetBundle/Resources/config/routing/job.yml
@@ -18,15 +18,15 @@ ibw_job_create:
     requirements: { _method: post }
 
 ibw_job_edit:
-    pattern:  /{id}/edit
+    pattern:  /{token}/edit
     defaults: { _controller: "IbwJobeetBundle:Job:edit" }
 
 ibw_job_update:
-    pattern:  /{id}/update
+    pattern:  /{token}/update
     defaults: { _controller: "IbwJobeetBundle:Job:update" }
     requirements: { _method: post|put }
 
 ibw_job_delete:
-    pattern:  /{id}/delete
+    pattern:  /{token}/delete
     defaults: { _controller: "IbwJobeetBundle:Job:delete" }
     requirements: { _method: post|delete }
