--- a/src/Ibw/JobeetBundle/Resources/config/validation.yml
+++ b/src/Ibw/JobeetBundle/Resources/config/validation.yml
@@ -22,3 +22,5 @@ Ibw\JobeetBundle\Entity\Job:
             - Email: ~
         url:
             - Url: ~
+        token:
+            - NotBlank: ~
