--- a/src/Ibw/JobeetBundle/Resources/config/routing/job.yml
+++ b/src/Ibw/JobeetBundle/Resources/config/routing/job.yml
@@ -6,7 +6,13 @@ ibw_job_show:
     pattern:  /{company}/{location}/{id}/{position}
     defaults: { _controller: "IbwJobeetBundle:Job:show" }
     requirements:
-        id: \d+
+        id:  \d+
+
+ibw_job_preview:
+    pattern:  /{company}/{location}/{token}/{position}
+    defaults: { _controller: "IbwJobeetBundle:Job:preview" }
+    requirements:
+        token:  \w+
 
 ibw_job_new:
     pattern:  /new
