--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -20,10 +20,8 @@ security:
         - { path: ^/admin, roles: ROLE_ADMIN }
 
     providers:
-        in_memory:
-            memory:
-                users:
-                    admin: { password: adminpass, roles: 'ROLE_ADMIN' }
+        main:
+            entity: { class: Ibw\JobeetBundle\Entity\User, property: username }
 
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
+        Ibw\JobeetBundle\Entity\User: sha512
