--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -4,6 +4,9 @@ login:
 login_check:
     pattern:   /login_check
 
+logout:
+    pattern:   /logout
+
 admin:
     resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
     prefix: /admin
