The Affiliates fixtures

--- a/src/Ibw/JobeetBundle/Resources/config/doctrine/Affiliate.orm.yml
+++ b/src/Ibw/JobeetBundle/Resources/config/doctrine/Affiliate.orm.yml
@@ -33,4 +33,4 @@ Ibw\JobeetBundle\Entity\Affiliate:
                     category_id:
                         referencedColumnName: id
     lifecycleCallbacks:
-        prePersist: [ setCreatedAtValue ]
+        prePersist: [ setCreatedAtValue, setTokenValue ]
