add The Job Web Service

--- a/src/Ibw/JobeetBundle/Resources/config/doctrine/Affiliate.orm.yml
+++ b/src/Ibw/JobeetBundle/Resources/config/doctrine/Affiliate.orm.yml
@@ -1,5 +1,6 @@
 Ibw\JobeetBundle\Entity\Affiliate:
     type: entity
+    repositoryClass: Ibw\JobeetBundle\Repository\AffiliateRepository
     table: affiliate
     id:
         id:
